--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li><a href="#">NFT Storage</a></li>
                 <li><a href="#">Pricing</a></li>
                 <li><a href="#">Developers</a></li>
-                <li><a href="#">Resource</a></li>
+                <li><a href="#">Resources</a></li>
             </ul>
             </div>
 
